translation-tool/inputs/source_meta/objects/HSvc_WWTSCalenderCriteria__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HSvc_ServiceOrderType__c</fullName>
        <label>Service Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ServiceProvider__c</fullName>
        <label>Service Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_WarrantyID__c</fullName>
        <label>Warranty ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WWTS Calender Criteria</label>
</CustomObject>